# gatech-cs6440-fhir-interoperability-project

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  FRONTEND_API.md  RUNNING.md  requirements.txt
backend/app/: __init__.py  config.py  docs.py
backend/app/middleware/: rbac.py
backend/app/models/: __init__.py  fhir_model.py  patient_model.py
backend/app/routes/: auth_routes.py  chart_routes.py  import_routes.py  patient_routes.py
backend/app/services/: auth_service.py  chart_service.py  epic_service.py  mock_emr_service.py  patient_compat_service.py  seed_service.py
backend/db/init/: 001_snapshot.sql  README.md
backend/postman/: fhir_diabetes_collection.json
backend/scripts/: demo_flow_test.py  migrate_patient_origin.py
course-labs/: README.md
course-labs/Extra-Credit-Lab-Bulk-FHIR/: README.md  pyproject.toml
course-labs/Extra-Credit-Lab-Bulk-FHIR/src/bulk_fhir/: dataloader.py  eda.py
course-labs/Extra-Credit-Lab-Bulk-FHIR/src/bulk_fhir/data/: Condition.ndjson
course-labs/Extra-Credit-Lab-Bulk-FHIR/tests/: test_dataloader.py  test_eda.py
course-labs/Lab-2-Introduction-to-FHIR-Resources-main/: README.md  pom.xml
course-labs/Lab-2-Introduction-to-FHIR-Resources-main/src/resources/: observation.json  patient.json  uscorepatient.json
course-labs/Lab-3-OMOP-on-FHIR-main/: .gitignore  README.md
course-labs/Lab-3-OMOP-on-FHIR-main/resources/: observation_1.json  observation_2.json  observation_3.json  observation_4.json  patient_1.json  patient_2.json
course-labs/Lab-3-OMOP-on-FHIR-main/student/: main.py  pyproject.toml  student_code.py
course-labs/Lab-3-OMOP-on-FHIR-main/student/tests/: test_simple.py
course-labs/Lab-3-OMOP-on-FHIR-main/student/util/: OmopOnFhir.py  sqlalchemydb.py
course-labs/Lab-4-SMART-on-FHIR-main/: README.md
course-labs/Lab-4-SMART-on-FHIR-main/src/app/: student-code.service.ts
course-labs/Lab-5-Clinical-Data-Extraction-main/: Lab-Setup.md  README.md  experiments.ipynb
course-labs/Lab-5-Clinical-Data-Extraction-main/submission/: README.md
course-labs/Lab-5-Clinical-Data-Extraction-main/submission/experiment1/: experiment_result.json
course-labs/Lab-5-Clinical-Data-Extraction-main/submission/experiment2/: experiment_result.json
course-labs/Lab-5-Clinical-Data-Extraction-main/submission/experiment3/: experiment_result.json
course-labs/Lab-5-Clinical-Data-Extraction-main/submission/experiment4/: experiment_result.json
course-labs/Lab-5-Clinical-Data-Extraction-main/submission/experiment5/: experiment_result.json
course-labs/Lab-5-Clinical-Data-Extraction-main/submission/experiment6/: experiment_result.json
course-labs/Lab-5-Clinical-Data-Extraction-main/submission/experiment7/: experiment_result.json
course-labs/Lab-6-FHIR-Data-Engineering/: Dockerfile  README.md  demo.py  docker-compose.yml  generate_model.py  pyproject.toml  requirements.txt
course-labs/Lab-6-FHIR-Data-Engineering/data/: Observations.ndjson  Patient.ndjson  test-observations.ndjson  test-patients.ndjson
course-labs/Lab-6-FHIR-Data-Engineering/models/: .gitkeep  feature_scaler.pkl  stroke_prediction_model.pth
course-labs/Lab-6-FHIR-Data-Engineering/src/ml_fhir/: __init__.py  inference.py  models.py  process.py  train.py
course-labs/Lab-6-FHIR-Data-Engineering/src/ml_fhir/data/: __init__.py  dataset.py
course-labs/Lab-6-FHIR-Data-Engineering/src/ml_fhir/etl/: __init__.py  _base.py  label.py  observations.py  patients.py
course-labs/Lab-6-FHIR-Data-Engineering/test/: test_neural_network.py
course-labs/Lab-6-FHIR-Data-Engineering/test/ml_fhir/data/: q1-1-test.csv  q1-2-test.csv  q2-glucose-test.csv  q2-tri-test.csv  q3-test.csv  q4-test.csv
course-labs/Lab-6-FHIR-Data-Engineering/test/ml_fhir/etl/: test_question1.py  test_question2.py  test_question3.py
fhir-interoperability-platform/: README.md
fhir-interoperability-platform/fhir-backend/: README.md
fhir-interoperability-platform/fhir-backend/backend/: .env.example  FRONTEND_API.md  RUNNING.md
fhir-interoperability-platform/fhir-frontend/: README.md  next.config.ts  package-lock.json  package.json
fhir-interoperability-platform/fhir-frontend/app/: layout.tsx  page.tsx
fhir-interoperability-platform/fhir-frontend/components/: AuthorizeButton.tsx  ClinicalNotes.tsx  ConditionsList.tsx  DataManagement.tsx  HbA1cTable.tsx  LearningGrid.tsx  MedicationProfile.tsx  PatientTable.tsx  QuickProfile.tsx  SafetyAlert.tsx  Sidebar.tsx  SidebarWrapper.tsx  TopBar.tsx  TopBarWrapper.tsx
fhir-interoperability-platform/fhir-frontend/services/: fhirService.ts
fhir-interoperability-platform/fhir-frontend/utils/: fhirMappers.ts
(+29 files in other folders)
