[project]
name = "bulk-fhir"
version = "0.1.0"
description = "Extra credit lab 2 for cs6440"
dependencies = [
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "gradescope-utils>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "notebook>=7.2.1",
    "requests>=2.32.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bulk_fhir"]
